# hober-bank

./: .dockerignore  .gitignore  Makefile  command.txt  db.sqlite3  interceptor.py  local.yml  pyproject.toml
.envs/: .env.example
config/: celery_app.py  urls.py
config/settings/: base.py  local.py
core_apps/common/: admin.py  apps.py  models.py  tasks.py
core_apps/common/migrations/: 0001_initial.py
core_apps/templates/emails/: account_locked.html  base.html  otp_email.html
core_apps/user_auth/: admin.py  apps.py  emails.py  forms.py  managers.py  middleware.py  models.py  utils.py  views.py
core_apps/user_auth/management/commands/: create_test_superuser.py
core_apps/user_auth/migrations/: 0001_initial.py  0002_alter_user_username.py
core_apps/user_profile/: admin.py  apps.py  models.py  readme.md  signals.py  utils.py
core_apps/user_profile/migrations/: 0001_initial.py
docker/local/django/: Dockerfile  entrypoint.sh
docker/local/django/celery/beat/: start.sh
docker/local/django/celery/flower/: start.sh
docker/local/django/celery/worker/: start.sh
docker/local/nginx/: Dockerfile  nginx.conf
